<resources>
    <string name="app_name">Gfiilapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">Uygulama Hakkında</string>
    <string name="result_tckn_valid">TC Kimlik Numarası Geçerli</string>
    <string name="result_content_missing">Lütfen gerekli alanları doldurunuz</string>
    <string name="result_tckn_invalid">TC Kimlik Numarası Geçersiz</string>
    <string name="result_content_invalid">Doldurduğunuz alanlar geçersiz bilgi içeriyor</string>
    <string name="result_connection_error">İnternet bağlantınız kesilmiş ya da TCKN Servisi devre dışı kalmış olabilir.</string>
    <string name="result_unknown_error">Beklenmedik bir hata oluştu. Hata kodu:</string>
        <string name="select">Select Item</string>
    <string name="tckn_title">TC Kimlik No (11 Karakter)</string>
    <string name="name">Adınız</string>
    <string name="surname">Soyadınız</string>
    <string name="year">Doğum yılınız ör.1993</string>
    <string name="sorgu">Sorgula</string>
</resources>